# air-drf-relation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  irelation.py  kek.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yaml
air_drf_relation/: __about__.py  __init__.py  decorators.py  fields.py  preload_objects_manager.py  serializers.py
book/: filters.py  models.py  serializers.py  tests.py  urls.py  views.py
core/: settings.py  urls.py
film/: models.py  tests.py
film/migrations/: 0001_initial.py
school/: models.py  tests.py
table/: serializers.py  tests.py
